--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   connectivity_plus: ^6.1.3
   http: ^1.3.0
   hive_flutter: ^1.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
